--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-## Deli Counter Simulator
-Kathleen Law
+Deli Counter Simulator - Kathleen Law
 
 This is a simple program which simulates a deli counter interaction.
 With a relational database created and manipulated with SQL, customer information,
